Version 1.0-SNAPSHOT with Java 11 support